--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
                     Soy Ricardo Lechman, estudiante de la tecnicatura en desarrollo de software, además realizó trabajos de reparación de PC.
                 </p>
             </div>
-        </div>
+        </div>    
 
-        <a class="button" href="#">Reproducir Musica</a>
-        <script src="botonsonido.js"></script>
     </section>
+
+    <div class="button-container">
+      <button id="playBtn">Play</button>
+      <button id="pauseBtn">Pause</button>
+    </div>
+    <script src="botonsonido.js"></script>
 
 
     <section class="dos">
@@ -80,7 +84,6 @@
     <section class="tres">
     <footer>
         <h2>Contactame</h2>
-        <i class="fa-solid fa-cubes"></i>
 
         <div class="contact_form">
 
